# chef

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  graphify-out  pyproject.toml
.codex/: config.toml
.codex-plugin/: .mcp.json
.github/workflows/: ci.yml
adapters/claude/: README.md
adapters/claude/.claude-plugin/: plugin.json
adapters/claude/commands/: chef-expert-plan.md  chef-graph-refresh.md  chef-pack-status.md
adapters/codex/: README.md
catalog/: items.json
core/: manifest.json  orchestration.md  packs.json
docs/: architecture.md  catalog-schema.md  install.md  manifest-schema.md  publish.md  skill-audit.md  tool-matrix.md
installer/: bootstrap.sh
installer/both/: install.sh
installer/claude/: install.sh
installer/codex/: install.sh
knowledge-vault/Home/: Home.md
knowledge-vault/Memory/: Basic Elements.md  Master Prompt.md  Memory.md
mcp/chef-knowledge-mcp/: README.md
mcp/chef-review-mcp/: README.md
mcp/chef-security-mcp/: README.md
packs/business/: pack.json
packs/core/: pack.json
packs/media/: pack.json
packs/orchestration/: pack.json
packs/research/: pack.json
packs/review/: pack.json
packs/security/: pack.json
packs/ux/: pack.json
src/chef/: catalog.py  cli.py  external.py  git_privacy.py  graphify.py  hosts.py  install_state.py  packs.py  paths.py  policy.py  scaffold.py
src/chef_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
templates/project/: AGENTS.md  CLAUDE.md  claude.settings.json  codex.config.toml
tests/: test_cli.py  test_external.py  test_mcp.py  test_skill_finder.py  test_talkcraft.py
(+19 files in other folders)
